Add browser-sync as a dev dependency and update About link text in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                                 <a href="#" class="header__link">Menu</a>
                             </li>
                             <li class="header__item">
-                                <a href="#" class="header__link">About us</a>
+                                <a href="#" class="header__link">About</a>
                             </li>
                             <li class="header__item">
                                 <a href="#" class="header__link">Contacts</a>
