--- a/src/index.html
+++ b/src/index.html
@@ -197,11 +197,11 @@
                 </div>
                 <ul class="footer__list col-8">
                     <li class="footer__item"><a href="#" class="footer__link">Menu</a></li>
-                    <li class="footer__item"><a href="#" class="footer__link">About us</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">About</a></li>
                     <li class="footer__item"><a href="#" class="footer__link">Contacts</a></li>
                     <li class="footer__item"><a href="#" class="footer__link">Instagram</a></li>
                     <li class="footer__item"><a href="#" class="footer__link">Facebook</a></li>
-                    <li class="footer__item"><a href="#" class="footer__link">Telegram Bot</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Telegram</a></li>
                 </ul>
             </nav>
             <p class="footer__copy">Developed for educational purposes © ITPU 2024</p>
