Enhance mobile responsiveness and layout for food and footer sections

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,10 @@
                 <div class="col-12">
                     <nav class="header__nav">
                         <a href="#" class="header__logo logo">street88</a>
-                        <div class="header__menu">
-                            <span></span>
+                        <div class="header-burger">
+                            <span class="header-burger__item"></span>
+                            <span class="header-burger__item"></span>
+                            <span class="header-burger__item"></span>
                         </div>
                         <ul class="header__list d-flex">
                             <li class="header__item">
