Add Raleway-Medium font and apply it to header navigation links

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
             <div class="row mh-100 flex-column">
                 <div class="col-12">
                     <nav class="header__nav">
-                        <a href="#" class="header__logo logo">street88</a>
+                        <a href="" class="header__logo logo">street88</a>
                         <div class="header-burger">
                             <span class="header-burger__item"></span>
                             <span class="header-burger__item"></span>
