Change header background video position to absolute and update footer social links with URLs

--- a/src/index.html
+++ b/src/index.html
@@ -201,9 +201,9 @@
                     <li class="footer__item"><a href="#" class="footer__link">Menu</a></li>
                     <li class="footer__item"><a href="#" class="footer__link">About</a></li>
                     <li class="footer__item"><a href="#" class="footer__link">Contacts</a></li>
-                    <li class="footer__item"><a href="#" class="footer__link">Instagram</a></li>
-                    <li class="footer__item"><a href="#" class="footer__link">Facebook</a></li>
-                    <li class="footer__item"><a href="#" class="footer__link">Telegram</a></li>
+                    <li class="footer__item"><a href="https://instagram.com/" class="footer__link">Instagram</a></li>
+                    <li class="footer__item"><a href="https://facebook.com/" class="footer__link">Facebook</a></li>
+                    <li class="footer__item"><a href="https://telegram.org/" class="footer__link">Telegram</a></li>
                 </ul>
             </nav>
             <p class="footer__copy">Developed for educational purposes © ITPU 2024</p>
