--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
                             "quick" food in the United States, from which poisoning tens of thousands of Americans find
                             themselves in hospital beds every day
                         </p>
-                        <p class="header__price">14 500 UZS</p>
+                        <p class="header__price">14,500 UZS</p>
                     </div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                     <div class="col-4 food__card">
                         <div class="food__img">
                             <img src="assets/images/burger.png" alt="">
-                            <p class="food__img-price">14 500 UZS</p>
+                            <p class="food__img-price">14,500 UZS</p>
                             <a class="food__img-txt" href="#">Add to cart</a>
                         </div>
                         <div class="food__desc">
@@ -100,62 +100,66 @@
                     </div>
                     <div class="col-4 food__card">
                         <div class="food__img">
-                            <img src="assets/images/burger.png" alt="">
-                            <p class="food__img-price">14 500 UZS</p>
+                            <img src="assets/images/hot-dog.png" alt="">
+                            <p class="food__img-price">12,000 UZS</p>
                             <a class="food__img-txt" href="#">Add to cart</a>
                         </div>
                         <div class="food__desc">
-                            <h3 class="food__desc-title">COMBO BURGER</h3>
-                            <p class="food__desc-txt">Fresh crispy bun, lettuce leaves, pickled cucumber with onions and
-                                a small cutlet flavored with mayonnaise and ketchup</p>
+                            <h3 class="food__desc-title">CLASSIC HOT-DOG</h3>
+                            <p class="food__desc-txt">Enjoy a soft, freshly baked bun holding a savory sausage grilled
+                                to perfection. It is dressed with a smooth layer of mustard and sweet ketchup, making it
+                                a simple yet classic delight for any snack or meal.</p>
                         </div>
                     </div>
                     <div class="col-4 food__card">
                         <div class="food__img">
-                            <img src="assets/images/burger.png" alt="">
-                            <p class="food__img-price">14 500 UZS</p>
+                            <img src="assets/images/pizza.png" alt="">
+                            <p class="food__img-price">50,000 UZS</p>
                             <a class="food__img-txt" href="#">Add to cart</a>
                         </div>
                         <div class="food__desc">
-                            <h3 class="food__desc-title">COMBO BURGER</h3>
-                            <p class="food__desc-txt">Fresh crispy bun, lettuce leaves, pickled cucumber with onions and
-                                a small cutlet flavored with mayonnaise and ketchup</p>
+                            <h3 class="food__desc-title">PEPPERONI PIZZA</h3>
+                            <p class="food__desc-txt">Features a crispy crust generously layered with a tomato base,
+                                gooey mozzarella cheese, and slices of spicy pepperoni. This crowd-pleasing pizza
+                                delivers a bold and irresistible taste in every bite.</p>
                         </div>
                     </div>
                     <div class="col-4 food__card">
                         <div class="food__img">
-                            <img src="assets/images/burger.png" alt="">
-                            <p class="food__img-price">14 500 UZS</p>
+                            <img src="assets/images/tea.png" alt="">
+                            <p class="food__img-price">7,000 UZS</p>
                             <a class="food__img-txt" href="#">Add to cart</a>
                         </div>
                         <div class="food__desc">
-                            <h3 class="food__desc-title">COMBO BURGER</h3>
-                            <p class="food__desc-txt">Fresh crispy bun, lettuce leaves, pickled cucumber with onions and
-                                a small cutlet flavored with mayonnaise and ketchup</p>
+                            <h3 class="food__desc-title">ICED TEA</h3>
+                            <p class="food__desc-txt">A cool and refreshing beverage available in lemon, peach, or mint
+                                flavors. Served in a 500ml bottle, it's a perfect choice for a hot day or a light meal
+                                accompaniment.</p>
                         </div>
                     </div>
                     <div class="col-4 food__card">
                         <div class="food__img">
-                            <img src="assets/images/burger.png" alt="">
-                            <p class="food__img-price">14 500 UZS</p>
+                            <img src="assets/images/juice.png" alt="">
+                            <p class="food__img-price">10,000 UZS</p>
                             <a class="food__img-txt" href="#">Add to cart</a>
                         </div>
                         <div class="food__desc">
-                            <h3 class="food__desc-title">COMBO BURGER</h3>
-                            <p class="food__desc-txt">Fresh crispy bun, lettuce leaves, pickled cucumber with onions and
-                                a small cutlet flavored with mayonnaise and ketchup</p>
+                            <h3 class="food__desc-title">APPLE JUICE</h3>
+                            <p class="food__desc-txt">Made from fresh, crisp apples, this 300ml juice is a pure and
+                                wholesome drink, offering a naturally sweet flavor with no added sugars.</p>
                         </div>
                     </div>
                     <div class="col-4 food__card">
                         <div class="food__img">
-                            <img src="assets/images/burger.png" alt="">
-                            <p class="food__img-price">14 500 UZS</p>
+                            <img src="assets/images/sauce.png" alt="">
+                            <p class="food__img-price">2,000 UZS</p>
                             <a class="food__img-txt" href="#">Add to cart</a>
                         </div>
                         <div class="food__desc">
-                            <h3 class="food__desc-title">COMBO BURGER</h3>
-                            <p class="food__desc-txt">Fresh crispy bun, lettuce leaves, pickled cucumber with onions and
-                                a small cutlet flavored with mayonnaise and ketchup</p>
+                            <h3 class="food__desc-title">KETCHUP</h3>
+                            <p class="food__desc-txt">A classic and tangy sauce made from ripe tomatoes, vinegar, and a
+                                blend of spices. It's the perfect complement to burgers, fries, and any meal that needs
+                                a touch of sweetness and acidity.</p>
                         </div>
                     </div>
                 </div>
