--- a/src/index.html
+++ b/src/index.html
@@ -70,23 +70,26 @@
             <div class="container">
                 <ul class="row food__list">
                     <li class="food__item">
-                        <a href="#" class="food__link">Gamburgers</a>
+                        <a href="#" class="food__link" data-type="All">All</a>
                     </li>
                     <li class="food__item">
-                        <a href="#" class="food__link">Hot-dogs</a>
+                        <a href="#" class="food__link" data-type="Gamburgers">Gamburgers</a>
                     </li>
                     <li class="food__item">
-                        <a href="#" class="food__link">Pizza</a>
+                        <a href="#" class="food__link" data-type="Hot-dogs">Hot-dogs</a>
                     </li>
                     <li class="food__item">
-                        <a href="#" class="food__link">Bevarages</a>
+                        <a href="#" class="food__link" data-type="Pizza">Pizza</a>
                     </li>
                     <li class="food__item">
-                        <a href="#" class="food__link">Juice</a>
+                        <a href="#" class="food__link" data-type="Bevarages">Bevarages</a>
+                    </li>
+                    <li class="food__item">
+                        <a href="#" class="food__link" data-type="Juice">Juice</a>
                     </li>
                 </ul>
-                <div class="row food__cards">
-                    <div class="col-4 food__card">
+                <div class="row food__cards" data-type="All">
+                    <div class="col-4 food__card" data-type="Gamburgers">
                         <div class="food__img">
                             <img src="assets/images/burger.png" alt="">
                             <p class="food__img-price">14,500 UZS</p>
@@ -98,7 +101,7 @@
                                 a small cutlet flavored with mayonnaise and ketchup</p>
                         </div>
                     </div>
-                    <div class="col-4 food__card">
+                    <div class="col-4 food__card" data-type="Hot-dogs">
                         <div class="food__img">
                             <img src="assets/images/hot-dog.png" alt="">
                             <p class="food__img-price">12,000 UZS</p>
@@ -111,7 +114,7 @@
                                 a simple yet classic delight for any snack or meal.</p>
                         </div>
                     </div>
-                    <div class="col-4 food__card">
+                    <div class="col-4 food__card" data-type="Pizza">
                         <div class="food__img">
                             <img src="assets/images/pizza.png" alt="">
                             <p class="food__img-price">50,000 UZS</p>
@@ -124,7 +127,7 @@
                                 delivers a bold and irresistible taste in every bite.</p>
                         </div>
                     </div>
-                    <div class="col-4 food__card">
+                    <div class="col-4 food__card" data-type="Bevarages">
                         <div class="food__img">
                             <img src="assets/images/tea.png" alt="">
                             <p class="food__img-price">7,000 UZS</p>
@@ -137,7 +140,7 @@
                                 accompaniment.</p>
                         </div>
                     </div>
-                    <div class="col-4 food__card">
+                    <div class="col-4 food__card" data-type="Juice">
                         <div class="food__img">
                             <img src="assets/images/juice.png" alt="">
                             <p class="food__img-price">10,000 UZS</p>
@@ -149,7 +152,7 @@
                                 wholesome drink, offering a naturally sweet flavor with no added sugars.</p>
                         </div>
                     </div>
-                    <div class="col-4 food__card">
+                    <div class="col-4 food__card" data-type="Bevarages">
                         <div class="food__img">
                             <img src="assets/images/sauce.png" alt="">
                             <p class="food__img-price">2,000 UZS</p>
