--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
             <div class="container">
                 <ul class="row food__list">
                     <li class="food__item">
-                        <a href="#" class="food__link" data-type="All">All</a>
+                        <a href="#" class="food__link active" data-type="All">All</a>
                     </li>
                     <li class="food__item">
                         <a href="#" class="food__link" data-type="Gamburgers">Gamburgers</a>
@@ -93,7 +93,7 @@
                         <div class="food__img">
                             <img src="assets/images/burger.png" alt="">
                             <p class="food__img-price">14,500 UZS</p>
-                            <a class="food__img-txt" href="#">Add to cart</a>
+                            <a class="food__img-txt" href="">Add to cart</a>
                         </div>
                         <div class="food__desc">
                             <h3 class="food__desc-title">COMBO BURGER</h3>
@@ -105,7 +105,7 @@
                         <div class="food__img">
                             <img src="assets/images/hot-dog.png" alt="">
                             <p class="food__img-price">12,000 UZS</p>
-                            <a class="food__img-txt" href="#">Add to cart</a>
+                            <a class="food__img-txt" href="">Add to cart</a>
                         </div>
                         <div class="food__desc">
                             <h3 class="food__desc-title">CLASSIC HOT-DOG</h3>
@@ -118,7 +118,7 @@
                         <div class="food__img">
                             <img src="assets/images/pizza.png" alt="">
                             <p class="food__img-price">50,000 UZS</p>
-                            <a class="food__img-txt" href="#">Add to cart</a>
+                            <a class="food__img-txt" href="">Add to cart</a>
                         </div>
                         <div class="food__desc">
                             <h3 class="food__desc-title">PEPPERONI PIZZA</h3>
@@ -131,7 +131,7 @@
                         <div class="food__img">
                             <img src="assets/images/tea.png" alt="">
                             <p class="food__img-price">7,000 UZS</p>
-                            <a class="food__img-txt" href="#">Add to cart</a>
+                            <a class="food__img-txt" href="">Add to cart</a>
                         </div>
                         <div class="food__desc">
                             <h3 class="food__desc-title">ICED TEA</h3>
@@ -144,7 +144,7 @@
                         <div class="food__img">
                             <img src="assets/images/juice.png" alt="">
                             <p class="food__img-price">10,000 UZS</p>
-                            <a class="food__img-txt" href="#">Add to cart</a>
+                            <a class="food__img-txt" href="">Add to cart</a>
                         </div>
                         <div class="food__desc">
                             <h3 class="food__desc-title">APPLE JUICE</h3>
@@ -156,7 +156,7 @@
                         <div class="food__img">
                             <img src="assets/images/sauce.png" alt="">
                             <p class="food__img-price">2,000 UZS</p>
-                            <a class="food__img-txt" href="#">Add to cart</a>
+                            <a class="food__img-txt" href="">Add to cart</a>
                         </div>
                         <div class="food__desc">
                             <h3 class="food__desc-title">KETCHUP</h3>
