Add unmute button functionality and update styles for header elements

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
             <source src="assets/video/bg_video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
+        <a class="unmute-btn" id="unmute-btn">🔇</a>
         <div class="container">
             <div class="row mh-100 flex-column">
                 <div class="col-12">
@@ -31,9 +32,6 @@
                         </div>
                         <ul class="header__list d-flex">
                             <li class="header__item">
-                                <a href="#" class="header__link">Cart</a>
-                            </li>
-                            <li class="header__item">
                                 <a href="#" class="header__link">Menu</a>
                             </li>
                             <li class="header__item">
@@ -43,7 +41,7 @@
                                 <a href="#" class="header__link">Contacts</a>
                             </li>
                             <li class="header__item">
-                                <a class="unmute-btn" id="unmute-btn">🔇</a>
+                                <a href="#" class="header__link">Cart 🛒</a>
                             </li>
                         </ul>
                     </nav>
