Add slider functionality, unmute button, and various style updates

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
             <div class="row mh-100 flex-column">
                 <div class="col-12">
                     <nav class="header__nav">
-                        <a href="" class="header__logo logo">street88</a>
+                        <a href="index.html" class="header__logo logo">street88</a>
                         <div class="header-burger">
                             <span class="header-burger__item"></span>
                             <span class="header-burger__item"></span>
@@ -32,7 +32,7 @@
                         </div>
                         <ul class="header__list d-flex">
                             <li class="header__item">
-                                <a href="#" class="header__link">Menu</a>
+                                <a href="menu.html" class="header__link">Menu</a>
                             </li>
                             <li class="header__item">
                                 <a href="#" class="header__link">About</a>
@@ -217,6 +217,7 @@
 
     <!-- Linking Scripts -->
     <script src="js/script.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
